# tryx-panorama

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: tryx-panorama.desktop
data/systemd/: tryx-panorama.service
data/udev/: 71-tryx-panorama.rules
scripts/: install-reed-tpse.sh  install-service.sh  install-udev.sh  install.sh
src/tryx_panorama/: __main__.py  app.py  backend.py  tray.py  window.py  workers.py
